fix: docs page sidebar overflow issue

--- a/apps/docs/app/global.css
+++ b/apps/docs/app/global.css
@@ -80,7 +80,7 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
@@ -89,7 +89,7 @@ body {
   color: var(--nb-text);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 ::selection {
